# pico-libsdemu

./: CMakeLists.txt  README.md  flake.nix
examples/: CMakeLists.txt
examples/hello_ram_sd/: .gitignore  CMakeLists.txt  build_image.sh  export_image.py  image.h  main.c
src/: libsdemu.c  spisd.pio
src/include/: libsdemu.h  spisd_program_init.h
src/include/pico/: libsdemu.h
